# game_forca

./: Makefile  README.md  main.py  pyproject.toml
.github/workflows/: makefile.yml
jogo_forca/: __init__.py  forca.py
tests/: test_jogo_forca.py
